<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_degrade"
    android:gravity="center_vertical|center_horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="55dp"
            android:background="@drawable/logo"
            android:id="@+id/imageView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fundo_caixa_texto"
            android:padding="16dp"
            android:layout_margin="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="@string/digite_seu_nome2"
            android:id="@+id/edit_cad_nome"
            android:layout_below="@+id/imageView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fundo_caixa_texto"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="@string/digite_seu_email"
            android:layout_margin="16dp"
            android:ems="10"
            android:id="@+id/edit_cad_email"
            android:layout_below="@+id/edit_cad_nome"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fundo_caixa_texto"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="@string/digite_sua_senha"
            android:inputType="textPassword"
            android:layout_margin="16dp"
            android:ems="10"
            android:id="@+id/edit_cad_senha"
            android:layout_below="@+id/edit_cad_email"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fundo_botao"
            android:text="@string/cadastrar"
            android:id="@+id/button_cad"
            android:layout_below="@+id/edit_cad_senha"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="23dp"
            android:layout_margin="16dp"/>


    </RelativeLayout>


</RelativeLayout>

